# Dotsy

./: .dotsyrc.json  .nvimlog  Cargo.toml  DESIGN.md  LICENSE  README.md  REFACTORING_SUMMARY.md  THREAD_SAFETY.md  TODO.md  package-lock.json  package.json  rustfmt.toml  test.config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
examples/: plugin_usage.rs
src/: cli.rs  config.ts  configs.rs  defaults.rs  dispatcher.ts  error.rs  index.ts  lib.rs  macros.rs  main.rs  shell.rs  validator.rs
src/cli/: mod.rs  plugin_commands.rs
src/commands/: config.rs  init.rs  mod.rs  profile.rs
src/handlers/: files.rs  link.rs  mod.rs  package.rs  plugin_handlers.rs  script.rs
src/managers/: config.ts  profile.ts
src/parsers/: config.ts  dotsyrc.ts
src/parsers/config/: index.ts
src/parsers/dotsyrc/: index.ts
src/plugins/: files.rs  link.rs  link.ts  mod.rs  plugin_trait.rs  registry.rs
src/profiles/: mod.rs  profile_manager.rs
src/utils/: builders.rs  config_manager.rs  file_manager.rs  list.ts  logger.rs  mod.rs  path.rs
src/utils/arg-validators/: config.ts
src/utils/helpers/: path.ts
src/utils/plugins/: context.ts  plugin.ts
src/utils/validators/: global-config.ts
src/validators/: config.ts  profile-args.ts  profile.ts
