[package]
name = "dotsy"
version = "0.8.2"
edition = "2018"
description = "A basic dotfile manager created to replace my usage of dotbot."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
glob = "0.3.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
shellexpand = "3.1.0"
snafu = "0.8.5"
structopt = "0.3.23"
valico = "4.0.0"
walkdir = "2.3.2"
ansi_term = "0.12.1"
