
[package]
name = "dotsy"
readme = "README.md"
repository = "https://github.com/nichtj3/Dotsy"
version = "1.0.1"
edition = "2021"
description = "A basic dotfile manager created to replace my usage of dotbot."
license = "MIT"

[[bin]]
edition = "2021"
name = "dotsy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "6.0.0"
glob = "0.3.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
shellexpand = "3.1.0"
snafu = "0.8.5"
structopt = "0.3.23"
valico = "4.0.0"
walkdir = "2.3.2"
ansi_term = "0.12.1"
